src/test/resources/typeSystemTestModels/invalid/expressions/InnerClass.java
package typeSystemTestModels.invalid.expressions;

public class InnerClass {

  public static int getInt(){
    return 1;
  }

  public class Chain {


  }
  public enum Day {
    MONDAY,
    TUESDAY
  }


  public enum DayDay {
    MONDAY,
    TUESDAY
  }

  final class C {

  }

  public class A {

  }

  public interface  A {

  }

  abstract class E {

  }
}